<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:id="@+id/relativeLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_sex_looking_for"
            android:id="@+id/textView6"
            android:textColor="@color/gray_dk"
            android:layout_centerVertical="true" />

        <Spinner
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerSexLookingFor"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_alignLeft="@+id/relativeLayout4"
        android:layout_alignRight="@+id/relativeLayout4"
        android:id="@+id/relativeLayout5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_notify_like"
            android:id="@+id/textView7"
            android:textColor="@color/gray_dk"
            android:layout_centerVertical="true" />

        <com.kyleduo.switchbutton.SwitchButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchLike"
            android:layout_centerVertical="true"
            android:layout_marginLeft="65dp"
            android:layout_marginStart="65dp"
            android:layout_alignParentRight="true"
            android:checked="false" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout5"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/relativeLayout4"
        android:layout_alignRight="@+id/relativeLayout4"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_notify_msg"
            android:id="@+id/textView8"
            android:layout_centerVertical="true"
            android:textColor="@color/gray_dk" />

        <com.kyleduo.switchbutton.SwitchButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchMessage"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:checked="false" />
    </RelativeLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/text_save"
        android:id="@+id/btnProfileSave"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_btn_facebook"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:textSize="18dp" />
</RelativeLayout>
