<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lyContacts"></LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/rlyNoContacts">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageView21"
            android:src="@drawable/ic_sad"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView11"
            android:layout_marginTop="100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_you_dont_have_any_matches_yet"
            android:id="@+id/textView11"
            android:layout_alignParentTop="true"
            android:layout_marginTop="44dp"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_below="@+id/textView11"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_you_must_like_other_users"
            android:id="@+id/textView13"
            android:layout_below="@+id/imageView21"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:gravity="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/text_start_now"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg_btn_sign"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white" />

    </RelativeLayout>
</RelativeLayout>
