<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imgMatchPhoto"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitStart"
        android:src="@drawable/ic_user" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/linearLayout2"
        android:layout_above="@+id/adView">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_signup"
            android:id="@+id/rlyGood">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView14"
                    android:src="@drawable/ic_like" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/text_good"
                    android:id="@+id/textView9"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:textSize="18dp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_signup"
            android:layout_marginLeft="20dp"
            android:id="@+id/rlyBad">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView15"
                    android:src="@drawable/ic_dislike" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/text_bad"
                    android:id="@+id/textView10"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:textSize="18dp" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="28 years"
        android:id="@+id/tvAge"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Mr Ben Barnes"
        android:id="@+id/tvName"
        android:layout_above="@+id/tvAge"
        android:layout_alignLeft="@+id/tvAge"
        android:layout_alignStart="@+id/tvAge"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/rlyPreload">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/gifImageView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/radar_loading_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_pls_wait_while_we_are_finding"
            android:id="@+id/textView16"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_matches_next_to_you"
            android:id="@+id/textView17"
            android:textStyle="bold"
            android:layout_below="@+id/textView16"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>